# chester

./: .gitignore  DESIGN.md  NOTES.md  README.md  pyproject.toml
chester/: compose.py  constants.py  run_worker.py  run_workflows.py
chester/ingestion/: ingestion_actions.py
chester/lib/: edgartools.py  serde.py
compose/: docker-compose-postgres.yml
tests/: test_ingest_multiple_workflow.py
